[package]
name = "luxya"
version = "1.1.2"
authors = ["franek <franeklubi@gmail.com>"]
edition = "2018"
description = "Programming language with a tree-walking interpreter"
license-file = "LICENSE"
repository = "https://github.com/franeklubi/luxya/"
keywords = [
	"programming-language",
	"interpreter",
	"programming-languages",
	"interpreted-programming-language",
	"tree-walk-interpreter",
]
categories = ["compilers"]

[dependencies]
exitcode = "1.1.2"
termcolor = "1.1.2"

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
